# django-admin-magic

./: 404.html  CI_CD_SETUP.md  README.md  SETUP_CI_CD.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  run_tests.py
.github/workflows/: ci.yml  deploy.yml  publish-pypi.yml  publish.yml  update-badges.yml
CI_CD_SETUP/: index.html
configuration/: index.html
demo_app/: README.md  manage.py  run_demo.py  setup_demo.py
demo_app/demo/: asgi.py  settings.py  urls.py
demo_app/demo_app/: apps.py  models.py  urls.py  views.py
demo_app/demo_app/management/commands/: createsuperuser_auto.py
demo_app/demo_app/migrations/: 0001_initial.py  0002_populate_sample_data.py
demo_app/demo_app/templates/demo_app/: index.html
features/: index.html
getting-started/: index.html
polymorphic/: index.html
reference/: index.html
reference/mixins/: index.html
reference/registrar/: index.html
reference/utils/: index.html
scripts/: test-ci-locally.py
search/: search_index.json
src/django_admin_magic/: __init__.py  apps.py  conf.py  defaults.py  mixins.py  registrar.py  utils.py
src/django_auto_admin/: __init__.py  apps.py  defaults.py  mixins.py  registrar.py  utils.py
tests/: DATABASE_AGNOSTIC_SUMMARY.md  DATABASE_TESTING.md  README.md  apps.py  conftest.py  docker-compose.test.yml  models.py  run_database_tests.py  test_comprehensive_models.py  test_config.py  test_config_comprehensive.py  test_database_agnostic.py  test_edge_cases.py  test_integration.py  test_mixins.py  test_model_discovery.py  test_registrar.py  test_settings.py  test_settings_database_variants.py  test_simple_model.py  test_utils.py  test_utils_comprehensive.py
usage/: index.html
utilities/: index.html
