[build-system]
requires = ["setuptools>=61.0", "setuptools-scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "django-admin-magic"
dynamic = ["version"]
description = "Automatic admin registration for Django projects."
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Lucas Whipple", email = "billthefighter@gmail.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "django>=3.2",
    "django-polymorphic>=3.0",
    "pytest>=8.3.5",
    "pytest-django>=4.11.1",
]

[project.urls]
Homepage = "https://github.com/billthefighter/django-admin-magic"

[tool.setuptools_scm]
version_scheme = "python-simplified-semver"
local_scheme = "node-and-timestamp"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-django",
    "pytest-cov",
    "pytest-xdist",
    "ruff",
    "pre-commit",
    "uv",
    "mypy",
    "bandit",
    "genbadge[coverage]",
]
build = [
    "build",
    "twine",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.test_settings"
python_files = "tests.py test_*.py *_tests.py"
pythonpath = [".", "src"]
addopts = "--tb=short"
markers = [
    "django_db: marks tests as requiring database access",
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
] 
